--- a/Axios/index.html
+++ b/Axios/index.html
@@ -8,6 +8,7 @@
     <title>Axios</title>
   </head>
   <body>
+    <ul id="planets-list"></ul>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
   </body>
