--- a/AJAX Giphy Party/index.html
+++ b/AJAX Giphy Party/index.html
@@ -1,46 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Giphy Party!</title>
+    <!-- ! Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <!-- ! Jquery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <!-- ! Axios -->
+    <script src="https://unpkg.com/axios/dist/axios.js"></script>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Giphy Party!</title>
-  <!-- ! Bootstrap -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <!-- ! Jquery -->
-  <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-  <!-- ! Axios -->
-  <script src="https://unpkg.com/axios/dist/axios.js"></script>
-  <link rel="stylesheet" href="style.css">
-  <script src="app.js"></script>
-</head>
+    <!-- ! CSS & JS  -->
+    <link rel="stylesheet" href="style.css" />
+    <script src="app.js" defer></script>
+  </head>
 
-<body style="background-color: #a0fefb;">
-  <div class="container-fluid">
-    <div class="jumbotron mt-4" style="background-color: #494fc1;">
-      <h1 class="display-4 text-center" style="color: #a0fefb;">GIFtastic</h1>
-      <p class="lead text-center" style="color: #a0fefb;">Find Your GIF</p>
-    </div>
-    <form id="search-form" class="">
-      <div class="form-group">
-        <label for="search-input" style="color: #494fc1;">Search for a GIF:</label>
-        <div class="input-group">
-          <input type="text" id="search-input" class="form-control" placeholder="Enter search term" required>
-          <div class="input-group-append">
-            <button type="submit" class="btn btn-outline-danger" >Search</button>
+  <body style="background-color: #a0fefb">
+    <div class="container-fluid">
+      <div class="jumbotron mt-4" style="background-color: #494fc1">
+        <h1 class="display-4 text-center" style="color: #a0fefb">GIFtastic</h1>
+        <p class="lead text-center" style="color: #a0fefb">Find Your GIF</p>
+      </div>
+      <form id="search-form" class="">
+        <div class="form-group">
+          <label for="search-input" style="color: #494fc1"
+            >Search for a GIF:</label
+          >
+          <div class="input-group">
+            <input
+              type="text"
+              id="search-input"
+              class="form-control"
+              placeholder="Enter search term"
+              required
+            />
+            <div class="input-group-append">
+              <button type="submit" class="btn btn-outline-danger">
+                Search
+              </button>
+            </div>
           </div>
         </div>
-      </div>
-    </form>
-    <div id="gif-container" class="gif-container mt-2">
-      <div class="row justify-content-sm-start">
-        <div class="col-4">
-          <button id="remove-all-button" class="btn btn-outline-danger btn-sm" >Remove All</button>
+      </form>
+      <div class="container-fluid">
+        <div class="row justify-content-lg-start">
+          <div class="col">
+            <button
+              id="remove-all-button"
+              class="btn btn-outline-danger btn-sm"
+            >
+              Remove All
+            </button>
+          </div>
         </div>
+        <!-- GIF will be displayed here -->
+        <div id="gif-container" class="row gif-container mt-4 mb-4"></div>
       </div>
-      <!-- GIF will be displayed here -->
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
