--- a/AJAX Giphy Party/index.html
+++ b/AJAX Giphy Party/index.html
@@ -1,66 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Giphy Party!</title>
-    <!-- ! Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
-    <!-- ! Jquery -->
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-    <!-- ! Axios -->
-    <script src="https://unpkg.com/axios/dist/axios.js"></script>
 
-    <!-- ! CSS & JS  -->
-    <link rel="stylesheet" href="style.css" />
-    <script src="app.js" defer></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <body style="background-color: #a0fefb">
-    <div class="container-fluid">
-      <div class="jumbotron mt-4" style="background-color: #494fc1">
-        <h1 class="display-4 text-center" style="color: #a0fefb">GIFtastic</h1>
-        <p class="lead text-center" style="color: #a0fefb">Find Your GIF</p>
-      </div>
-      <form id="search-form" class="">
-        <div class="form-group">
-          <label for="search-input" style="color: #494fc1"
-            >Search for a GIF:</label
-          >
-          <div class="input-group">
-            <input
-              type="text"
-              id="search-input"
-              class="form-control"
-              placeholder="Enter search term"
-              required
-            />
-            <div class="input-group-append">
-              <button type="submit" class="btn btn-outline-danger">
-                Search
-              </button>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+  <!-- Local CSS -->
+  <link rel="stylesheet" href="style.css">
+  <title>Image Search</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">GIFly</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Menu
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Link 1</a>
+              <a class="dropdown-item" href="#">Link 2</a>
+              <a class="dropdown-item" href="#">Link 3</a>
             </div>
-          </div>
-        </div>
-      </form>
-      <div class="container-fluid">
-        <div class="row justify-content-lg-start">
-          <div class="col">
-            <button
-              id="remove-all-button"
-              class="btn btn-outline-danger btn-sm"
-            >
-              Remove All
-            </button>
-          </div>
-        </div>
-        <!-- GIF will be displayed here -->
-        <div id="gif-container" class="row gif-container mt-4 mb-4"></div>
+          </li>
+        </ul>
       </div>
     </div>
-  </body>
+  </nav>
+
+  <div class="container mt-4">
+    <div class="row mb-4">
+      <div class="col">
+        <form id="search-form">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Enter search terms" id="search-input">
+            <div class="input-group-append">
+              <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div id="image-container" class="row"></div>
+  </div>
+
+  <!-- jQuery and Bootstrap Bundle -->
+  <script
+  src="https://code.jquery.com/jquery-3.7.0.slim.js"
+  integrity="sha256-7GO+jepT9gJe9LB4XFf8snVOjX3iYNb0FHYr5LI1N5c="
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+</body>
+
 </html>
