--- a/AJAX Giphy Party/index.html
+++ b/AJAX Giphy Party/index.html
@@ -8,8 +8,6 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-  <!-- Local CSS -->
-  <link rel="stylesheet" href="style.css">
   <title>Image Search</title>
 </head>
 
@@ -52,7 +50,7 @@
         </form>
       </div>
     </div>
-    <div id="image-container" class="row"></div>
+    <div id="image-container" class="row row-cols-3"></div>
   </div>
 
   <!-- jQuery and Bootstrap Bundle -->
@@ -61,6 +59,14 @@
   integrity="sha256-7GO+jepT9gJe9LB4XFf8snVOjX3iYNb0FHYr5LI1N5c="
   crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
+
+  <!-- Axios -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+  <!-- Local CSS & JS -->
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js"></script>
 </body>
 
 </html>
