--- a/AJAX Giphy Party/index.html
+++ b/AJAX Giphy Party/index.html
@@ -50,6 +50,9 @@
         </form>
       </div>
     </div>
+    <div class="row">
+      <button type="button" class="btn btn-primary btn-lg btn-block mb-2" id="remove-all">Remove All</button>
+    </div>
     <div id="image-container" class="row row-cols-3"></div>
   </div>
 
